# Omnibot

./: AuthClient.cpp  AuthClient.h  CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h  GameClient.cpp  GameClient.h  Omnibot.cpp  Omnibot.h  Python.h  README.md  Utils.cpp  Utils.h  Vault.cpp  Vault.h  main.cpp
cmake/: FindReadline.cmake
